step 3 done, bugfix, cleanup
